# atomic-sast-mcp-server

./: .gitignore  README.md  pyproject.toml  sast.py  sast_c.py  sast_go.py  sast_rust.py
.github/workflows/: python-package.yml
src/atomic_sast4c_mcp_server/: server.py
src/atomic_sast4c_mcp_server/rules/semgrep/: get_function_call.yaml  get_function_definition.yaml  get_macro_definition.yaml  get_structure_definition.yaml  get_variable_definition.yaml
src/atomic_sast4go_mcp_server/: server.py
src/atomic_sast4go_mcp_server/rules/semgrep/: get_function_definition.yaml  get_type_definition.yaml
src/atomic_sast4rust_mcp_server/: server.py
src/atomic_sast4rust_mcp_server/rules/semgrep/: get_function_definition.yaml  get_impl_block.yaml  get_item_definition.yaml
src/atomic_sast_mcp_common/: __init__.py  dependencies.py
tests/: test_c_mcp_tools.py  test_go_mcp_tools.py  test_rust_mcp_tools.py
